2005-07-26  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/hikifarm/vc-backend-setup.cgi: HikifarmRepos*#import/imported?
	should take a basenamed wiki name. (by Atsushi Koga)

2005-07-21  Kazuhiko  <kazuhiko@fdiary.net>
	* Hiki 0.8.2 released!

2005-07-21  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/hiki-mode/hiki-mode.el (hiki-fetch-index): fixed: FrontPage
	is not listed in hiki-index.

	* misc/hiki-mode/hiki-mode.el (hiki-edit-save-page): fixed: Can't
	save keywords when initial keyword is empty. (by Takeshi UME Imai)

	* misc/hiki-mode/hiki-mode.el (hiki-display-page): fixed: Can't
	input keywords if keywords area is erased once.

2005-07-20  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/attach/attach.cgi: only output basename of attached
	/ detached files in diff mails.

	* style/default/html_formatter.rb (make_link): use a page name
	instead of a page title in a 'title' attribute (closes #14).

	* misc/plugin/bbs.rb: support changing heading levels (by
	U.Nakamura).

	* hiki/pluginutil.rb (argwords): escape double quotes (reported by
	Kazuhiro NISHIYAMA).

2005-07-19  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki-mode.el: revise for 0.8.1 (by Takeshi UME Imai).

2005-07-17  Kazuhiko  <kazuhiko@fdiary.net>
	* plugin/00default.rb (toc_here): support a toc of another page.

	* misc/plugin/diffmail.rb (updating_mail): support the word diff
	format.
	* hiki/util.rb (word_diff_text): support the digest mode.

2005-07-17  Kouhei Yanagita <sugi@dream.big.or.jp>
	* doc/HACKING.txt, doc/HACKING.en: add HACKING documents.

2005-07-16  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (token_to_s): add interwiki to
	toc_title (reported by Kazuhiro NISHIYAMA).

	* misc/plugin/attach/attach.rb (attach_show_page_files_checkbox):
	escape a filename (reported by Kazuhiro NISHIYAMA).
	(attach_flash_anchor): escape a filename.

2005-07-16  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki/repos/default.rb: ReposBase#root and ReposBase#data_path are
	now private.
